--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.ts"
+    "dev": "nodemon index.ts",
+    "test": "npx jest"
   },
   "keywords": [],
   "author": "",
@@ -13,18 +14,23 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "haversine-distance": "^1.2.3",
     "morgan": "^1.10.0",
+    "ngeohash": "^0.6.3",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
     "@types/morgan": "^1.9.9",
+    "@types/ngeohash": "^0.6.8",
     "@types/node": "^22.15.3",
     "jest": "^29.7.0",
     "module-alias": "^2.2.3",
     "nodemon": "^3.1.10",
     "prettier": "^3.5.3",
+    "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0"
   }
