--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.ts",
+    "build": "npx tsc",
+    "start": "node dist/index.js",
     "test": "npx jest",
     "seed": "ts-node src/utils/seeder.ts"
   },
